added fonts and id

--- a/daily-challenge.css
+++ b/daily-challenge.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap');
+
 h1 {
-    font-family: sans-serif;
+    font-family: 'Oswald', sans-serif;
     text-align: center;
     color: rgb(83, 75, 75);
   }
 
   p {
-    font-family: sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     text-align: center;
     color: rgb(83, 75, 75);
   }
@@ -17,4 +19,10 @@ h1 {
 
   a:hover {
     text-decoration: underline;
+  }
+
+  #todays-challenge {
+    color: rgb(170, 96, 83);
+    font-weight: bold;
+    font-size: 52px;
   }
