--- a/styles/base.css
+++ b/styles/base.css
@@ -3,11 +3,11 @@
 body {
     text-align: center;
     background-color: rgb(233, 215, 207);
+    color: rgb(83, 75, 75);
 }
 
 h1, h2 {
     font-family: 'Oswald', sans-serif;
-    color: rgb(83, 75, 75);
 }
 
 a {
@@ -21,7 +21,6 @@ a:hover {
     text-decoration: underline;
 }
 
-p {
+p, ul {
     font-family: 'Fira sans', sans-serif;
-    color: rgb(17, 20, 1);
 }
