--- a/styles/daily-challenge.css
+++ b/styles/daily-challenge.css
@@ -1,17 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap");
 
-body {
-  margin: 50px;
+main {
+  display: block;
+  margin: 200px auto 72px auto;
+  margin-top: 150px;
+  width: 800px;
+  height: 500px;
+  background-color: rgb(219, 108, 94);
+  padding: 24px;
+  border: 5px solid rgb(44, 44, 44);
+  border-radius: 8px;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.3);
 }
 
 img {
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  border: 5px solid rgb(44, 44, 44);
+  margin-top: -134px;
+}
+
+h1 {
+  font-size: 30px;
+  color: rgb(31, 25, 25);
 }
 
 #todays-challenge {
-  color: rgb(170, 96, 83);
+  color: rgb(75, 59, 59);
   font-weight: bold;
   font-size: 52px;
+}
+
+span {
+  color: rgb(66, 2, 2);
+}
+
+a {
+  color: rgb(73, 29, 50);
 }
