--- a/styles/full-week.css
+++ b/styles/full-week.css
@@ -5,11 +5,11 @@ header {
 h1 {
     font-size: 48px;
     color: rgb(71, 62, 62);
-    margin: 12px 0;
+    margin: 0;
 }
 
 #description {
-    margin-bottom: 36px;
+    margin: 12px 0;
 } 
 
 /* header p {
@@ -23,6 +23,8 @@ a#back {
     border: 1px solid rgb(167, 1, 78);
     border-radius: 4px;
     font-size: 24px;
+    display: inline-block; /*add 'a' in the header properly*/
+    margin: 0;
 }
 
 a#back:hover {
@@ -39,6 +41,7 @@ ul {
 
 li {
     padding: 16px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     margin: 32px;
     background-color: rgb(223, 136, 124);
     border-radius: 6px;
